syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesgatewayapicrds.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesgatewayapicrds/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesgatewayapicrds/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// KubernetesGatewayApiCrds installs the Kubernetes Gateway API Custom Resource
// Definitions (CRDs) on a target Kubernetes cluster. The Gateway API provides
// a next-generation, role-oriented, expressive API for managing ingress and
// service mesh traffic.
message KubernetesGatewayApiCrds {
  // api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  // resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesGatewayApiCrds'];

  // metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // spec
  KubernetesGatewayApiCrdsSpec spec = 4 [(buf.validate.field).required = true];

  // status
  KubernetesGatewayApiCrdsStatus status = 5;
}

// KubernetesGatewayApiCrdsStatus represents the status of the Gateway API CRDs
// installation.
message KubernetesGatewayApiCrdsStatus {
  // stack-outputs
  KubernetesGatewayApiCrdsStackOutputs outputs = 1;
}
