syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesgatewayapicrds.v1;

import "org/project_planton/provider/kubernetes/kubernetesgatewayapicrds/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

// KubernetesGatewayApiCrdsStackInput provides the inputs for deploying
// Gateway API CRDs to a Kubernetes cluster.
message KubernetesGatewayApiCrdsStackInput {
  // target cloud-resource
  KubernetesGatewayApiCrds target = 1;
  // provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
